<resources>
    <string name="app_name">FirebaseDbSample</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="Name">name</string>
    <string name="Button">button</string>
    <string name="selected_item">Selected item:</string>
    <string name="select_language">Select a water source:</string>
    <string name="hint">Hint</string>
    <string name="submitted_source">Submitted Water Source:</string>
    <string name="logout">Logout</string>
    <string name="google_login">Google Login</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>

    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>
    <string name="Save">Save</string>


    <string-array name="WaterSource">
        <item>Lake</item>
        <item>Bore Well</item>
        <item>Effluent</item>
        <item>Rain</item>
        <item>River</item>
    </string-array>
</resources>
